--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ requirements:
     - pip
     - pypandoc <1.8.0
     - python {{ python_min }}
+    - setuptools
   run:
     - beautifulsoup4
     - python >={{ python_min }}
